<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_project"
    android:backgroundTint="@color/black_project"
    tools:context=".fragments.MainFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/search_ticket"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:lineHeight="26dp"
        android:text="@string/text_search_ticket"
        android:textAlignment="center"
        android:textColor="@color/white_2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_block_place"
        android:layout_width="329dp"
        android:layout_height="122dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_main_block_place"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_ticket">

        <LinearLayout
            android:id="@+id/second_block_place"
            android:layout_width="296dp"
            android:layout_height="90dp"
            android:layout_margin="16dp"
            android:background="@drawable/background_second_block_place"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:src="@drawable/search_logo" />

            <LinearLayout
                android:id="@+id/block_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/from_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:hint="@string/text_from_moscow"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_6"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray_5" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/to_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:hint="@string/text_to_turkey"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_6"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fly_away_musically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/text_fly_away_musically"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_block_place" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offer_list"
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fly_away_musically"
        tools:itemCount="3"
        tools:listitem="@layout/offer_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_all_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_show_all_place"
        android:fontFamily="@font/sf_pro_display_regular_italic"
        android:text="@string/text_show_all_place"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_list" />

</androidx.constraintlayout.widget.ConstraintLayout>